[Duc] fix softmax + Kmeans + eda

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -672,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean = df_clean.drop(['SMOKE', 'SCC'], axis=1)"
+    "# df_clean = df_clean.drop(['SMOKE', 'SCC'], axis=1)"
    ]
   },
   {
@@ -719,7 +719,9 @@
        "      <th>FCVC</th>\n",
        "      <th>NCP</th>\n",
        "      <th>CAEC</th>\n",
-       "      <th>CH2O</th>\n",
+       "      <th>SMOKE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SCC</th>\n",
        "      <th>FAF</th>\n",
        "      <th>TUE</th>\n",
        "      <th>CALC</th>\n",
@@ -743,7 +745,9 @@
        "      <td>2.000000</td>\n",
        "      <td>2.983297</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.763573</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.976473</td>\n",
        "      <td>1</td>\n",
@@ -765,7 +769,9 @@
        "      <td>2.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>2</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0</td>\n",
@@ -787,7 +793,9 @@
        "      <td>1.880534</td>\n",
        "      <td>1.411685</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.910378</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.866045</td>\n",
        "      <td>1.673584</td>\n",
        "      <td>0</td>\n",
@@ -809,7 +817,9 @@
        "      <td>3.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.674061</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>1.467863</td>\n",
        "      <td>0.780199</td>\n",
        "      <td>1</td>\n",
@@ -831,7 +841,9 @@
        "      <td>2.679664</td>\n",
        "      <td>1.971472</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.979848</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>1.967973</td>\n",
        "      <td>0.931721</td>\n",
        "      <td>1</td>\n",
@@ -844,6 +856,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -854,12 +867,12 @@
        "3       0  20.0    1.71  131.27                               1     1   \n",
        "4       1  31.0    1.91   93.80                               1     1   \n",
        "\n",
-       "       FCVC       NCP  CAEC      CH2O       FAF       TUE  CALC  \\\n",
-       "0  2.000000  2.983297     1  2.763573  0.000000  0.976473     1   \n",
-       "1  2.000000  3.000000     2  2.000000  1.000000  1.000000     0   \n",
-       "2  1.880534  1.411685     1  1.910378  0.866045  1.673584     0   \n",
-       "3  3.000000  3.000000     1  1.674061  1.467863  0.780199     1   \n",
-       "4  2.679664  1.971472     1  1.979848  1.967973  0.931721     1   \n",
+       "       FCVC       NCP  CAEC  SMOKE  ...  SCC       FAF       TUE  CALC  \\\n",
+       "0  2.000000  2.983297     1      0  ...    0  0.000000  0.976473     1   \n",
+       "1  2.000000  3.000000     2      0  ...    0  1.000000  1.000000     0   \n",
+       "2  1.880534  1.411685     1      0  ...    0  0.866045  1.673584     0   \n",
+       "3  3.000000  3.000000     1      0  ...    0  1.467863  0.780199     1   \n",
+       "4  2.679664  1.971472     1      0  ...    0  1.967973  0.931721     1   \n",
        "\n",
        "   MTRANS_Automobile  MTRANS_Bike  MTRANS_Motorbike  \\\n",
        "0                  0            0                 0   \n",
@@ -873,7 +886,9 @@
        "1                             0               0           1  \n",
        "2                             1               0           0  \n",
        "3                             1               0           4  \n",
-       "4                             1               0           6  "
+       "4                             1               0           6  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
      "execution_count": 12,
